--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,15 @@
     "outDir": "./build",
     "baseUrl": "./",
     "paths": {
+      "modules/*": [
+        "./src/modules/*"
+      ],
       "src/*": [
         "./src/*"
       ]
     },
   },
-  "include": ["src/**/*.ts", "spec/**/*.ts"],
-  "exclude": ["node_modules"],
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "spec"],
   "lib": ["es2015"]
 }
