--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a website for playing mahjong. HONG KONG MAHJONG. Take your riichi ass back to Japan.",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon",
+    "test": "vitest",
+    "dev": "nodemon --watch 'src/**/*.ts'",
     "start": "node build/index.js",
     "build": "tsc --project ./"
   },
@@ -20,22 +21,20 @@
   "homepage": "https://github.com/JamesBell15/mahjong#readme",
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.0.0",
     "dotenv": "^17.2.1",
     "eslint": "^9.34.0",
     "install": "^0.13.0",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "npm": "^11.5.2",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
+    "express": "^5.1.0",
     "fs": "^0.0.1-security",
-    "node": "^23.7.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "express": "^5.1.0"
+    "node": "24.0.0"
   }
 }
