--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,8 @@
 services:
   server:
-    build: .
+    build:
+      context: .
+      target: deploy
     environment:
       NODE_ENV: production
     volumes:
